--- a/task4_devops/Dockerfile_php
+++ b/task4_devops/Dockerfile_php
@@ -29,5 +29,5 @@ ADD ./sshd_config /etc/ssh/sshd_config
 RUN echo root:jenkins | chpasswd
 CMD ["/usr/sbin/sshd","-D"] 
 
-
+RUN chmod -R 777 /root/jenkins
 COPY php-deployment.yml /root
