--- a/task4_devops/Dockerfile_html
+++ b/task4_devops/Dockerfile_html
@@ -28,7 +28,7 @@ RUN ssh-keygen -A
 ADD ./sshd_config /etc/ssh/sshd_config
 RUN echo root:jenkins | chpasswd
 CMD ["/usr/sbin/sshd","-D"] 
-
+RUN chmod -R 777 /root/jenkins
 COPY web-deployment.yml /root
 
 
